--- a/index.html
+++ b/index.html
@@ -1,13 +1,152 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/index.css" rel="stylesheet" />
 
-    <title>Ivoire Bauhaus</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!-- Primary SEO Meta Tags -->
+    <title>
+      Ivoire Bauhaus | Promotion Immobilière & Communication en Côte d'Ivoire
+    </title>
+    <meta
+      name="title"
+      content="Ivoire Bauhaus | Promotion Immobilière & Communication en Côte d'Ivoire"
+    />
+    <meta
+      name="description"
+      content="Ivoire Bauhaus est un groupe multiservices en Côte d'Ivoire spécialisé en promotion immobilière, vente de terrains et régie publicitaire. Découvrez Ivoire Gardens à Assinie et nos solutions d'affichage LED."
+    />
+    <meta
+      name="keywords"
+      content="Ivoire Bauhaus, promotion immobilière Côte d'Ivoire, immobilier Abidjan, terrain Assinie, Ivoire Gardens, régie publicitaire Abidjan, affichage LED, camion publicitaire, panneau publicitaire Côte d'Ivoire, investissement immobilier Abidjan, villa Assinie, communication publicitaire"
+    />
+    <meta name="author" content="Ivoire Bauhaus Group" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="fr" />
+    <meta name="geo.region" content="CI" />
+    <meta name="geo.placename" content="Abidjan, Côte d'Ivoire" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.ivoirebauhaus.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.ivoirebauhaus.com/" />
+    <meta
+      property="og:title"
+      content="Ivoire Bauhaus | Promotion Immobilière & Communication en Côte d'Ivoire"
+    />
+    <meta
+      property="og:description"
+      content="Groupe multiservices spécialisé en promotion immobilière, vente de terrains et régie publicitaire en Côte d'Ivoire. Découvrez nos projets à Assinie et Abidjan."
+    />
+    <meta
+      property="og:image"
+      content="https://www.ivoirebauhaus.com/logo.png"
+    />
+    <meta property="og:locale" content="fr_CI" />
+    <meta property="og:site_name" content="Ivoire Bauhaus" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.ivoirebauhaus.com/" />
+    <meta
+      name="twitter:title"
+      content="Ivoire Bauhaus | Promotion Immobilière & Communication en Côte d'Ivoire"
+    />
+    <meta
+      name="twitter:description"
+      content="Groupe multiservices spécialisé en promotion immobilière, vente de terrains et régie publicitaire en Côte d'Ivoire."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.ivoirebauhaus.com/logo.png"
+    />
+
+    <!-- Structured Data: Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Ivoire Bauhaus",
+        "url": "https://www.ivoirebauhaus.com",
+        "logo": "https://www.ivoirebauhaus.com/logo.png",
+        "description": "Groupe multiservices en Côte d'Ivoire spécialisé en promotion immobilière, vente de terrains et régie publicitaire.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Cocody Riviera Palmeraie, SIPIM 4",
+          "addressLocality": "Abidjan",
+          "addressCountry": "CI"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+225-07-18-92-00-06",
+          "contactType": "service client",
+          "availableLanguage": ["Français"]
+        },
+        "sameAs": [
+          "https://www.instagram.com/ivoirebauhaus/",
+          "https://www.facebook.com/profile.php?id=61575648928455",
+          "https://www.linkedin.com/company/ivoire-bauhaus-group/",
+          "https://www.tiktok.com/@ivoire.bauhaus"
+        ]
+      }
+    </script>
+
+    <!-- Structured Data: Local Business -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "RealEstateAgent",
+        "name": "Ivoire Bauhaus",
+        "image": "https://www.ivoirebauhaus.com/logo.png",
+        "url": "https://www.ivoirebauhaus.com",
+        "telephone": "+225-07-18-92-00-06",
+        "email": "contact@ivoirebauhaus.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Cocody Riviera Palmeraie, SIPIM 4",
+          "addressLocality": "Abidjan",
+          "addressRegion": "Lagunes",
+          "addressCountry": "CI"
+        },
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday"
+            ],
+            "opens": "08:00",
+            "closes": "18:00"
+          },
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": "Saturday",
+            "opens": "09:00",
+            "closes": "14:00"
+          }
+        ],
+        "areaServed": {
+          "@type": "Country",
+          "name": "Côte d'Ivoire"
+        },
+        "priceRange": "$$"
+      }
+    </script>
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link href="/src/index.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
