--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       name="description"
-      content="Ivoire Bauhaus est un groupe multiservices en Côte d'Ivoire spécialisé en promotion immobilière, vente de terrains et régie publicitaire. Découvrez Ivoire Gardens à Assinie et nos solutions d'affichage LED."
+      content="Ivoire Bauhaus accompagne particuliers et entreprises en Côte d’Ivoire à travers la promotion immobilière et des solutions de communication publicitaire innovantes, dont l’affichage LED."
     />
     <meta
       name="keywords"
