--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       name="keywords"
-      content="Ivoire Bauhaus, promotion immobilière Côte d'Ivoire, immobilier Abidjan, terrain Assinie, Ivoire Gardens, régie publicitaire Abidjan, affichage LED, camion publicitaire, panneau publicitaire Côte d'Ivoire, investissement immobilier Abidjan, villa Assinie, communication publicitaire"
+      content="Ivoire Bauhaus, promotion immobilière Côte d'Ivoire, immobilier Abidjan, Ivoire Gardens, régie publicitaire Abidjan, affichage LED, camion publicitaire, panneau publicitaire Côte d'Ivoire, investissement immobilier Abidjan, villa Assinie, communication publicitaire"
     />
     <meta name="author" content="Ivoire Bauhaus Group" />
     <meta name="robots" content="index, follow" />
@@ -42,7 +42,7 @@
     />
     <meta
       property="og:description"
-      content="Groupe multiservices spécialisé en promotion immobilière, vente de terrains et régie publicitaire en Côte d'Ivoire. Découvrez nos projets à Assinie et Abidjan."
+      content="Ivoire Bauhaus accompagne particuliers et entreprises en Côte d’Ivoire à travers la promotion immobilière et des solutions de communication publicitaire innovantes, dont l’affichage LED."
     />
     <meta
       property="og:image"
@@ -60,7 +60,7 @@
     />
     <meta
       name="twitter:description"
-      content="Groupe multiservices spécialisé en promotion immobilière, vente de terrains et régie publicitaire en Côte d'Ivoire."
+      content="Ivoire Bauhaus accompagne particuliers et entreprises en Côte d’Ivoire à travers la promotion immobilière et des solutions de communication publicitaire innovantes, dont l’affichage LED."
     />
     <meta
       name="twitter:image"
@@ -75,7 +75,7 @@
         "name": "Ivoire Bauhaus",
         "url": "https://www.ivoirebauhaus.com",
         "logo": "https://www.ivoirebauhaus.com/logo.png",
-        "description": "Groupe multiservices en Côte d'Ivoire spécialisé en promotion immobilière, vente de terrains et régie publicitaire.",
+        "description": "Ivoire Bauhaus accompagne particuliers et entreprises en Côte d’Ivoire à travers la promotion immobilière et des solutions de communication publicitaire innovantes, dont l’affichage LED.",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Cocody Riviera Palmeraie, SIPIM 4",
